@@ -275,7 +275,11 @@
       <artifactId>json</artifactId>
       <version>20140107</version>
     </dependency>
-    
+	<dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+    </dependency>    
 
     <!-- Test dependencies -->
     <dependency>
