@@ -1,0 +1,71 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.tika.parser.geo.topic.gazetteer;
+
+import java.io.Serializable;
+
+public class Location implements Serializable{
+
+	private static final long serialVersionUID = -59485448766406004L;
+	
+	private String name;
+	private String countryCode;
+	private String admin1Code;
+	private String admin2Code;
+	private String latitude;
+	private String longitude;
+	
+	
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	public String getCountryCode() {
+		return countryCode;
+	}
+	public void setCountryCode(String countryCode) {
+		this.countryCode = countryCode;
+	}
+	public String getAdmin1Code() {
+		return admin1Code;
+	}
+	public void setAdmin1Code(String admin1Code) {
+		this.admin1Code = admin1Code;
+	}
+	public String getAdmin2Code() {
+		return admin2Code;
+	}
+	public void setAdmin2Code(String admin2Code) {
+		this.admin2Code = admin2Code;
+	}
+	public String getLatitude() {
+		return latitude;
+	}
+	public void setLatitude(String latitude) {
+		this.latitude = latitude;
+	}
+	public String getLongitude() {
+		return longitude;
+	}
+	public void setLongitude(String longitude) {
+		this.longitude = longitude;
+	}
+
+}
